more info collapse issue

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 @import url('https://fonts.googleapis.com/css?family=Federant|Oswald');
 
+#headline h1{
+    font-family: 'Federant', cursive;
+    -webkit-text-stroke: 0.5px black;
+    color: #ffc107;
+    font-size: 3rem;
+    display: inline;
+}
 
 #coins-page{
     padding: 3%;
-
 }
 
 .logo {
@@ -17,9 +23,9 @@
     font-size: 20px;
     letter-spacing: 2px;
 }
+
 .logo input {
     line-height: 1;
-
 }
 
 nav {
@@ -34,7 +40,7 @@ nav ul {
     list-style: none;
     background: rgba(0, 0, 0, 0);
     overflow: hidden;
-    color: #fff;
+    /* color: #fff; */
     padding: 0;
     text-align: right;
     margin: 0;
@@ -48,7 +54,7 @@ nav.black ul {
     
 }
 nav.black ul a{
-    color: #fff;
+    color: #fff !important;
     font-family: 'Oswald', sans-serif;
     font-size: 2rem;
     
@@ -74,13 +80,10 @@ nav ul li a:hover {
    
 }
 
-
-
-
 .menu-icon {
     line-height: 60px;
     width: 100%;
-    background: #000;
+    background: rgb(110, 104, 104);
     text-align: right;
     box-sizing: border-box;
     padding: 15px 24px;
@@ -88,6 +91,10 @@ nav ul li a:hover {
     color: #fff;
     display: none;
 }
+
+
+
+
 
 @media(max-width: 786px) {
 
@@ -99,19 +106,17 @@ nav ul li a:hover {
 
 
     nav ul {
-          max-height: 0px;
-          background: #000;
-     
+        max-height: 0px;
+        background: rgb(110, 104, 104);  
     }
 
     nav.black ul {
-          background: #000;
-     
-
+        background: rgb(110, 104, 104);
     }
 
     .showing {
-          max-height: 34em;
+          max-height: 20em;
+          line-height: 2px;
     }
 
     nav ul li {
@@ -123,6 +128,11 @@ nav ul li a:hover {
 
     .menu-icon {
           display: block;
+    }
+
+    #headline h1{
+       display: none;
+
     }
 
 }
@@ -152,23 +162,13 @@ nav ul li a:hover {
     background-image: url("../img/calculation.jpg");
     opacity: 0.5;
     height: 1000px; 
-
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 
-
 }
 
-#headline h1{
-    font-family: 'Federant', cursive;
-    -webkit-text-stroke: 0.5px black;
-    color: #ffc107;
-    font-size: 3rem;
-    display: inline;
-    
 
-}
 
